azure-ClusterIP-service.yml
apiVersion: v1  #if we wanted to deploy loadbalancer instead of ingress
kind: Service
metadata:
  name: frontendservice
  namespace: vishal
spec:
  type: ClusterIP
  selector:
    app: gratitude-kube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
