azure-LoadBalancer-service.yml
apiVersion: v1  #if we wanted to deploy loadbalancer instead of ingress
kind: Service
metadata:
  name: gratitudeservice
  namespace: vishal
spec:
  type: LoadBalancer
  selector:
    app: gratitude-kube
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
